--- a/force-app/main/default/lwc/portfolioHeader/portfolioHeader.css
+++ b/force-app/main/default/lwc/portfolioHeader/portfolioHeader.css
@@ -1,3 +1,33 @@
 .portfolio-header {
-    background-color: #FFF;
+    position: relative;
+}
+
+.portfolio-header .background-image{
+    opacity: .3;
+}
+
+.portfolio-header .badge{
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    width: 10%;
+}
+
+.portfolio-header .text-container{
+    color: #320532;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.portfolio-header h1{
+    font-size:5vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.portfolio-header h2{
+    font-size:4vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
