--- a/force-app/main/default/lwc/portfolioHeader/portfolioHeader.css
+++ b/force-app/main/default/lwc/portfolioHeader/portfolioHeader.css
@@ -1,26 +1,33 @@
 .portfolio-header {
-    position: relative;
+    /* position: relative; */
+    display: flex;
 }
 
-.portfolio-header .background-image{
+.portfolio-header .header-image-wrapper {
+    position: relative;
+    max-width: 1200px;
+    margin: auto
+}
+
+.portfolio-header .header-image-wrapper .background-image{
     opacity: .3;
 }
 
-.portfolio-header .platform-app-builder-badge{
+.portfolio-header .header-image-wrapper .platform-app-builder-badge{
     position: absolute;
     top: 3px;
     left: 3px;
     width: 10%;
 }
 
-.portfolio-header .javascript-developer-1-badge{
+.portfolio-header .header-image-wrapper .javascript-developer-1-badge{
     position: absolute;
     top: 3px;
     left: 12%;
     width: 10%;
 }
 
-.portfolio-header .text-container{
+.portfolio-header .header-image-wrapper .text-container{
     color: #320532;
     text-align: center;
     position: absolute;
@@ -29,12 +36,12 @@
     transform: translate(-50%, -50%);
 }
 
-.portfolio-header h1{
-    font-size:5vw;
+.portfolio-header .header-image-wrapper h1{
+    font-size: min(5vw, 60px);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.portfolio-header h2{
-    font-size:4vw;
+.portfolio-header .header-image-wrapper h2{
+    font-size: min(4vw, 48px);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
